
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ kern_return_t ;
typedef int io_service_t ;
typedef int CFNumberRef ;
typedef int * CFMutableDictionaryRef ;


 int CFDictionaryGetValueIfPresent (int *,int ,int*) ;
 int CFNumberGetValue (int,int ,int*) ;
 int CFSTR (char*) ;
 scalar_t__ IORegistryEntryCreateCFProperties (int,int **,int *,int ) ;
 int KERN_FAILURE ;
 scalar_t__ KERN_SUCCESS ;
 int kCFNumberSInt32Type ;
 int printf (char*,int,int,int,int) ;

__attribute__((used)) static int print_usb_device(io_service_t device){

    kern_return_t err = KERN_SUCCESS;

    CFNumberRef vid = 0;
    CFNumberRef pid = 0;
    CFNumberRef locationID = 0;

    CFMutableDictionaryRef p = ((void*)0);
    err = IORegistryEntryCreateCFProperties(device, &p, ((void*)0), 0);

    if(err != KERN_SUCCESS || !p)
        return err;

    if(!CFDictionaryGetValueIfPresent(p, CFSTR("idVendor"), &vid))
        return KERN_FAILURE;

    if(!CFDictionaryGetValueIfPresent(p, CFSTR("idProduct"), &pid))
        return KERN_FAILURE;

    CFDictionaryGetValueIfPresent(p, CFSTR("locationID"), &locationID);

    CFNumberGetValue(vid, kCFNumberSInt32Type, &vid);
    CFNumberGetValue(pid, kCFNumberSInt32Type, &pid);

    if(locationID)
        CFNumberGetValue(locationID, kCFNumberSInt32Type, &locationID);

    printf("Got device %#x @ %#x (%#x:%#x)\n", device, locationID, vid, pid);
    return err;
}
